Working DeepSeek R1 with Open Web UI

--- a/roles/deepseek/tasks/create-local-pv.yml
+++ b/roles/deepseek/tasks/create-local-pv.yml
@@ -1,8 +1,10 @@
 ---
 - name: Create Namespace for Ollama
   shell: |
-    kubectl create namespace {{ _ollama.namespace }}
+    kubectl create namespace {{ item }}
   register: create_ollama_ns
+  with_items:
+    - "{{ _deepseek.namespace }}"
 - debug: msg={{ create_ollama_ns }}
   when: print_debug == true
 
