--- a/roles/deepseek/tasks/install-ollama-operator.yml
+++ b/roles/deepseek/tasks/install-ollama-operator.yml
@@ -1,16 +1,18 @@
 ---
 - name: Install the Ollama Operator
   shell: |
-    kubectl apply --server-side=true -f \
+    kubectl -n {{ _ollama.namespace }} apply --server-side=true -f \
     https://raw.githubusercontent.com/nekomeowww/ollama-operator/v{{ _ollama_version }}/dist/install.yaml
   register: install_ollama_operator
 - debug: msg={{ install_ollama_operator }}
   when: print_debug == true
+# kubectl apply --server-side=true -f \
+# https://raw.githubusercontent.com/nekomeowww/ollama-operator/v{{ _ollama_version }}/dist/install.yaml
 
 
 - name: Wait for the Operator to be Ready
   shell: |
-    kubectl wait -n ollama-operator-system --for=jsonpath='{.status.readyReplicas}'=1 deployment/ollama-operator-controller-manager
+    kubectl wait -n {{ _ollama.namespace }} --for=jsonpath='{.status.readyReplicas}'=1 deployment/ollama-operator-controller-manager
   register: wait_for_ready
   until: wait_for_ready is succeeded
   # async: 400
@@ -19,4 +21,5 @@
     chdir: "{{ base_path }}"
 - debug: msg={{ wait_for_ready }}
   when: print_debug == true
+# kubectl wait -n ollama-operator-system --for=jsonpath='{.status.readyReplicas}'=1 deployment/ollama-operator-controller-manager
 
