--- a/roles/deepseek/tasks/install-open-webui.yml
+++ b/roles/deepseek/tasks/install-open-webui.yml
@@ -1,17 +1,8 @@
+---
 - name: Check if Open Web UI Directory exists
   stat: path={{ base_path }}/open-webui
   register: open_webui_dir
 - debug: msg={{ open_webui_dir }}
-  when: print_debug == true
-
-
-- name: Create Namespace for Open Web UI
-  shell: |
-    kubectl create namespace {{ item }}
-  register: create_open_webui_namespace
-  with_items:
-    - "{{ _open_webui.namespace }}"
-- debug: msg={{ create_open_webui_namespace }}
   when: print_debug == true
 
 
@@ -27,7 +18,7 @@
 
 - name: Install Open Web UI
   shell: |
-    /usr/local/bin/helm install open-webui open-webui/open-webui -n open-webui -f {{ base_path }}/open-webui-values.yaml
+    /usr/local/bin/helm install open-webui open-webui/open-webui -n {{ _deepseek.namespace }} -f {{ base_path }}/open-webui-values.yaml
   register: install_open_webui
   args:
     chdir: "{{ base_path }}/"
@@ -35,9 +26,20 @@
   when: print_debug == true
 
 
+#3. Useful Commands:
+#  - Check deployment status:
+#      helm status open-webui -n deepseek
+#
+#  - Get detailed information:
+#      helm get all open-webui -n deepseek
+#
+#  - View logs:
+#      kubectl logs -f statefulset/open-webui -n deepseek
+
+
 - name: Validate if Open Web UI Container is Running
   shell: |
-    kubectl get pods -n open-webui |  grep open-webui | awk '{print $3}' | grep Running | wc -l
+    kubectl get pods -n {{ _deepseek.namespace }} |  grep open-webui | awk '{print $3}' | grep Running | wc -l
   register: check_open_webui_container
   until: check_open_webui_container.stdout|int == 1
   retries: 100
