--- a/roles/deepseek/tasks/apply-deepseek-kernel-parameters.yml
+++ b/roles/deepseek/tasks/apply-deepseek-kernel-parameters.yml
@@ -1,13 +1,13 @@
 ---
 - name: Create Directory for Persistent Volumes for DeepSeek
   file:
-    path: "{{ _ollama.storage_path }}-{{ item }}"
+    path: "{{ _deepseek.storage_path }}-{{ item }}"
     state: directory
     owner: root
     group: root
     mode: 0777
   register: create_pv_dir
-  with_sequence: start=0 end={{ ollama_total_pvs|int }}
+  with_sequence: start=0 end={{ deepseek_total_pvs|int }}
 - debug: msg={{ create_pv_dir }}
   when: print_debug == true
 
@@ -19,7 +19,7 @@
     state: present
   register: apply_kernel_parameters
   with_items:
-    - "{{ _ollama.kernel_parameters }}"
+    - "{{ _deepseek.kernel_parameters }}"
   notify:
     - Reload Sysctl
 - debug: msg={{ apply_kernel_parameters }}
