--- a/roles/deepseek/tasks/remove-deepseek-kernel-parameters.yml
+++ b/roles/deepseek/tasks/remove-deepseek-kernel-parameters.yml
@@ -1,10 +1,10 @@
 ---
 - name: Remove Directory for Persistent Volumes for Ollama
   file:
-    path: "{{ _ollama.storage_path }}-{{ item }}"
+    path: "{{ _deepseek.storage_path }}-{{ item }}"
     state: absent
   register: remove_pv_dir
-  with_sequence: start=0 end={{ ollama_total_pvs|int }}
+  with_sequence: start=0 end={{ deepseek_total_pvs|int }}
 - debug: msg={{ remove_pv_dir }}
   when: print_debug == true
 
@@ -16,7 +16,7 @@
     state: absent
   register: delete_kernel_parameters
   with_items:
-    - "{{ _ollama.kernel_parameters }}"
+    - "{{ _deepseek.kernel_parameters }}"
   notify:
     - Reload Sysctl
 - debug: msg={{ delete_kernel_parameters }}
