--- a/roles/deepseek/vars/main.yml
+++ b/roles/deepseek/vars/main.yml
@@ -10,7 +10,6 @@ _kustomize:
   patch_version: 2
 
 
-# go1.23.5.linux-amd64.tar.gz
 _go:
   download: true
   major_version: 1
@@ -19,55 +18,20 @@ _go:
 
 
 _ollama:
+  major_version: 0
+  minor_version: 10
+  patch_version: 7
+  namespace: ollama-operator-system
+
+
+_deepseek:
   download: true
   install: true
   major_version: 0
   minor_version: 10
   patch_version: 7
   admin_user: "admin"
-  admin_password: "Changeme123"
-  admin_email: "rokmc756@gmail.com"
-  enable_discovery_daemon: false
-  clone_git: true
-  nvme: true
-  namespace: ollama-operator-system
-  storage_path: "/mnt/ollama-storage"
-  storage_class: "ollama-storage"
-  hostname: "deepseek.jtest.pivotal.io"
-  service:
-    metadata:
-      name: deepseek-loadbalancer
-      namespace: deepseek
-  ingress:
-    metadata:
-      name: deepseek-ingress
-      namespace: deepseek
-    hostname: "deepseek.jtest.pivotal.io"
-  kernel_parameters:
-    - "net.ipv4.neigh.default.gc_thresh1 = 0"   # For ARP Cache
-    - "fs.inotify.max_user_instances=2280"
-    - "fs.inotify.max_user_watches=755360"
-  lb:
-    install: true
-    ip_addr: "192.168.1.234"
-  sharded_shard: 4                # It should be less than number of data nodes
-  shardsvr: 4
-  deepseeks: 3
-  configsvr: 2
-
-
-# ollama_total_pvs: "{{ ( _ollama.sharded_shard|int * _ollama.shardsvr|int ) + _ollama.configsvr|int }}"
-ollama_total_pvs: 5
-
-
-_deepseek:
-  install: true
-  major_version: 27
-  minor_version: 1
-  patch_version: 2
-  build_version:
-  admin_user: "admin"
-  admin_password: "Changeme123"
+  admin_password: "changeme"
   admin_email: "rokmc756@gmail.com"
   enable_discovery_daemon: false
   clone_git: true
@@ -75,11 +39,6 @@ _deepseek:
   namespace: deepseek
   storage_path: "/mnt/deepseek-storage"
   storage_class: "deepseek-storage"
-  k8s:
-    major_version: 1
-    minor_version: 28
-    patch_version: 0
-    build_version:
   hostname: "deepseek.jtest.pivotal.io"
   service:
     metadata:
@@ -97,12 +56,105 @@ _deepseek:
   lb:
     install: true
     ip_addr: "192.168.1.234"
-  sharded_shard: 4                # It should be less than number of data nodes
-  shardsvr: 4
-  deepseeks: 3
-  configsvr: 2
+#  sharded_shard: 4                # It should be less than number of data nodes
+#  shardsvr: 4
+#  deepseeks: 3
+#  configsvr: 2
+#
+#
+## ollama_total_pvs: "{{ ( _ollama.sharded_shard|int * _ollama.shardsvr|int ) + _ollama.configsvr|int }}"
+#ollama_total_pvs: 5
 
-deepseek_total_pvs: "{{ ( _deepseek.sharded_shard|int * _deepseek.shardsvr|int ) + _deepseek.configsvr|int }}"
+deepseek_total_pvs: 5
+# deepseek_total_pvs: "{{ ( _deepseek.sharded_shard|int * _deepseek.shardsvr|int ) + _deepseek.configsvr|int }}"
+
+
+
+#_ollama:
+#  download: true
+#  install: true
+#  major_version: 0
+#  minor_version: 10
+#  patch_version: 7
+#  admin_user: "admin"
+#  admin_password: "Changeme123"
+#  admin_email: "rokmc756@gmail.com"
+#  enable_discovery_daemon: false
+#  clone_git: true
+#  nvme: true
+#  namespace: ollama-operator-system
+#  storage_path: "/mnt/ollama-storage"
+#  storage_class: "ollama-storage"
+#  hostname: "deepseek.jtest.pivotal.io"
+#  service:
+#    metadata:
+#      name: deepseek-loadbalancer
+#      namespace: deepseek
+#  ingress:
+#    metadata:
+#      name: deepseek-ingress
+#      namespace: deepseek
+#    hostname: "deepseek.jtest.pivotal.io"
+#  kernel_parameters:
+#    - "net.ipv4.neigh.default.gc_thresh1 = 0"   # For ARP Cache
+#    - "fs.inotify.max_user_instances=2280"
+#    - "fs.inotify.max_user_watches=755360"
+#  lb:
+#    install: true
+#    ip_addr: "192.168.1.234"
+#  sharded_shard: 4                # It should be less than number of data nodes
+#  shardsvr: 4
+#  deepseeks: 3
+#  configsvr: 2
+#
+#
+## ollama_total_pvs: "{{ ( _ollama.sharded_shard|int * _ollama.shardsvr|int ) + _ollama.configsvr|int }}"
+#ollama_total_pvs: 5
+
+
+#_deepseek:
+#  install: true
+#  major_version: 27
+#  minor_version: 1
+#  patch_version: 2
+#  build_version:
+#  admin_user: "admin"
+#  admin_password: "Changeme123"
+#  admin_email: "rokmc756@gmail.com"
+#  enable_discovery_daemon: false
+#  clone_git: true
+#  nvme: true
+#  namespace: deepseek
+#  storage_path: "/mnt/deepseek-storage"
+#  storage_class: "deepseek-storage"
+#  k8s:
+#    major_version: 1
+#    minor_version: 28
+#    patch_version: 0
+#    build_version:
+#  hostname: "deepseek.jtest.pivotal.io"
+#  service:
+#    metadata:
+#      name: deepseek-loadbalancer
+#      namespace: deepseek
+#  ingress:
+#    metadata:
+#      name: deepseek-ingress
+#      namespace: deepseek
+#    hostname: "deepseek.jtest.pivotal.io"
+#  kernel_parameters:
+#    - "net.ipv4.neigh.default.gc_thresh1 = 0"   # For ARP Cache
+#    - "fs.inotify.max_user_instances=2280"
+#    - "fs.inotify.max_user_watches=755360"
+#  lb:
+#    install: true
+#    ip_addr: "192.168.1.234"
+#  sharded_shard: 4                # It should be less than number of data nodes
+#  shardsvr: 4
+#  deepseeks: 3
+#  configsvr: 2
+#
+#deepseek_total_pvs: "{{ ( _deepseek.sharded_shard|int * _deepseek.shardsvr|int ) + _deepseek.configsvr|int }}"
 
 
 _deepseek_express:
