--- a/roles/deepseek/tasks/create-local-pv.yml
+++ b/roles/deepseek/tasks/create-local-pv.yml
@@ -18,6 +18,7 @@
     - "local-storage-class.yaml"
     - "local-storage-pv.yaml"
     - "local-storage-pvc.yaml"
+    - "local-storage-open-webui-pvc.yaml"
 - debug: msg={{ copy_local_pv_config_yaml }}
 
 
