--- a/roles/deepseek/tasks/delete-local-pv.yml
+++ b/roles/deepseek/tasks/delete-local-pv.yml
@@ -9,6 +9,7 @@
     - "local-storage-class.yaml"
     - "local-storage-pv.yaml"
     - "local-storage-pvc.yaml"
+    - "local-storage-open-webui-pvc.yaml"
 - debug: msg={{ copy_local_pvc_config_yaml }}
 
 
@@ -48,15 +49,4 @@
   ignore_errors: true
 - debug: msg={{ delete_deepseek_ns }}
   when: print_debug == true
-
-
-#- name: Remove Directory for Persistent Volumes for Ollama
-#  file:
-#    path: "{{ _ollama.storage_path }}-{{ item }}"
-#    state: absent
-#  register: remove_pv_dir
-#  with_sequence: start=0 end={{ ollama_total_pvs|int }}
-#- debug: msg={{ remove_pv_dir }}
-#  when: print_debug == true
-
 
