--- a/roles/deepseek/tasks/uninstall-open-webui.yml
+++ b/roles/deepseek/tasks/uninstall-open-webui.yml
@@ -5,7 +5,7 @@
   register: uninstall_open_webui
   ignore_errors: true
   args:
-    chdir: "{{ base_path }}/"
+    chdir: "{{ base_path }}"
 - debug: msg={{ uninstall_open_webui }}
   when: print_debug == true
 
@@ -22,7 +22,28 @@
   when: print_debug == true
 
 
-- name: Delete Open Web UI Config Yaml and Directory
+- name: Copy Open Web UI and PVC Config Yaml
+  template:
+    src: "{{ item }}.j2"
+    dest: "{{ base_path }}/{{ item }}"
+  register: copy_open_webui_config_yaml
+  with_items:
+    - "local-storage-open-webui-pvc.yaml"
+- debug: msg={{ copy_open_webui_config_yaml }}
+
+
+- name: Delete Open Web UI PVC
+  shell: |
+    kubectl -n {{ _deepseek.namespace }} delete -f local-storage-open-webui-pvc.yaml
+  register: delete_open_webui_pvc
+  ignore_errors: true
+  args:
+    chdir: "{{ base_path }}"
+- debug: msg={{ delete_open_webui_pvc }}
+  when: print_debug == true
+
+
+- name: Delete Open Web UI and PVC Config Yaml
   file:
     path: "{{ base_path }}/{{ item }}"
     state: absent
@@ -30,7 +51,7 @@
   ignore_errors: true
   with_items:
     - "open-webui-values.yaml"
+    - "local-storage-open-webui-pvc.yaml"
 - debug: msg={{ delete_open_webui_config }}
   when: print_debug == true
-
 
