--- a/roles/deepseek/tasks/install-open-webui.yml
+++ b/roles/deepseek/tasks/install-open-webui.yml
@@ -60,3 +60,8 @@
 # kubectl logs -f statefulset/open-webui -n deepseek
 
 
+# OLLAMA_HOST=192.168.1.171:32379 ollama run deepseek-r1
+#
+# OLLAMA_HOST=192.168.1.171:32379 ollama serve
+
+
