--- a/roles/k8s/vars/main.yml
+++ b/roles/k8s/vars/main.yml
@@ -48,10 +48,10 @@ common_conf_files:
   - "/var/lib/docker/containers"
   - "/var/lib/docker/overlay2"
   - "/etc/modules-load.d/containerd.conf"
-  - "/mnt/awx-storage"
-  - "/mnt/cf-k8s-storage"
-  - "/mnt/cf-db-storage"
-  - "/mnt/cf-blobstore-storage"
+  - "/opt/awx-storage"
+  - "/opt/cf-k8s-storage"
+  - "/opt/cf-db-storage"
+  - "/opt/cf-blobstore-storage"
   - "/root/cf-for-k8s"
   - "/etc/kubernetes/pki/ca.crt"
   - "/var/lib/rook"
@@ -66,10 +66,10 @@ common_conf_files:
 
 
 cont_conf_files:
-  - "/mnt/awx-storage"
-  - "/mnt/cf-k8s-storage"
-  - "/mnt/cf-db-storage"
-  - "/mnt/cf-blobstore-storage"
+  - "/opt/awx-storage"
+  - "/opt/cf-k8s-storage"
+  - "/opt/cf-db-storage"
+  - "/opt/cf-blobstore-storage"
   - "/root/cf-for-k8s"
   - "/var/lib/rook"
   - "/root/calico.yaml"
