--- a/roles/awx/vars/main.yml
+++ b/roles/awx/vars/main.yml
@@ -14,7 +14,7 @@ _awx:
   clone_git: true
   nvme: true
   namespace: awx
-  storage_path: "/mnt/awx-storage"
+  storage_path: "/opt/awx-storage"
   storage_class: "awx-storage"
   k8s:
     major_version: 1
