--- a/roles/geode/vars/main.yml
+++ b/roles/geode/vars/main.yml
@@ -22,7 +22,7 @@ _geode:
   clone_git: true
   nvme: true
   namespace: geode
-  storage_path: "/mnt/geode-storage"
+  storage_path: "/opt/geode-storage"
   storage_class: "geode-storage"
   k8s:
     major_version: 1
