--- a/roles/hadoop/vars/main.yml
+++ b/roles/hadoop/vars/main.yml
@@ -22,7 +22,7 @@ _hadoop:
   clone_git: true
   nvme: true
   namespace: hadoop
-  storage_path: "/mnt/hadoop-storage"
+  storage_path: "/opt/hadoop-storage"
   storage_class: "hadoop-storage"
   k8s:
     major_version: 1
