--- a/roles/harbor/vars/main.yml
+++ b/roles/harbor/vars/main.yml
@@ -22,7 +22,7 @@ _harbor:
   clone_git: true
   nvme: true
   namespace: harbor
-  storage_path: "/mnt/harbor-storage"
+  storage_path: "/opt/harbor-storage"
   storage_class: "harbor-storage"
   k8s:
     major_version: 1
