--- a/roles/influxdb/vars/main.yml
+++ b/roles/influxdb/vars/main.yml
@@ -22,7 +22,7 @@ _influxdb:
   clone_git: true
   nvme: true
   namespace: influxdb
-  storage_path: "/mnt/influxdb-storage"
+  storage_path: "/opt/influxdb-storage"
   storage_class: "influxdb-storage"
   k8s:
     major_version: 1
