--- a/roles/minio/vars/main.yml
+++ b/roles/minio/vars/main.yml
@@ -22,7 +22,7 @@ _minio:
   clone_git: true
   nvme: true
   namespace: minio
-  storage_path: "/mnt/minio-storage"
+  storage_path: "/opt/minio-storage"
   storage_class: "minio-storage"
   k8s:
     major_version: 1
