--- a/roles/rabbitmq/vars/main.yml
+++ b/roles/rabbitmq/vars/main.yml
@@ -22,7 +22,7 @@ _rabbitmq:
   clone_git: true
   nvme: true
   namespace: rabbitmq
-  storage_path: "/mnt/rabbitmq-storage"
+  storage_path: "/opt/rabbitmq-storage"
   storage_class: "rabbitmq-storage"
   k8s:
     major_version: 1
