--- a/roles/spark/vars/main.yml
+++ b/roles/spark/vars/main.yml
@@ -21,7 +21,7 @@ _spark:
   clone_git: true
   nvme: true
   namespace: spark
-  storage_path: "/mnt/spark-storage"
+  storage_path: "/opt/spark-storage"
   storage_class: "spark-storage"
   k8s:
     major_version: 1
