--- a/roles/valkey/vars/main.yml
+++ b/roles/valkey/vars/main.yml
@@ -22,7 +22,7 @@ _valkey:
   clone_git: true
   nvme: true
   namespace: valkey
-  storage_path: "/mnt/valkey-storage"
+  storage_path: "/opt/valkey-storage"
   storage_class: "valkey-storage"
   k8s:
     major_version: 1
